{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 22,
  "lineage": "54c089f7-79be-b9ac-50fe-8510ca54c531",
  "resources": [
    {
      "module": "module.wordpress-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wp-vpc",
      "provider": "module.wordpress-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:vpc/vpc-08a8573f00677f710",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-042ffff04b8af12bf",
            "default_route_table_id": "rtb-05eadc5b1cb2eb229",
            "default_security_group_id": "sg-052ef559195071516",
            "dhcp_options_id": "dopt-0000a12e5b3eebea3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08a8573f00677f710",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05eadc5b1cb2eb229",
            "owner_id": "021891614879",
            "tags": {
              "Name": "wordpress-vpc"
            },
            "tags_all": {
              "Name": "wordpress-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.wp-priv",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:route-table/rtb-0bc5ad21c43db1bfd",
            "id": "rtb-0bc5ad21c43db1bfd",
            "owner_id": "021891614879",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "wordpress-db-rt"
            },
            "tags_all": {
              "Name": "wordpress-db-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a8573f00677f710"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wordpress-vpc.aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.wp-priv",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pr_rt_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.101.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055d75c826964b9c4",
            "route_table_id": "rtb-0bc5ad21c43db1bfd",
            "subnet_id": "subnet-0ea7c9fb12b03406a"
          },
          "dependencies": [
            "module.wordpress-vpc.aws_vpc.wp-vpc",
            "module.wp-priv.aws_route_table.db_rt",
            "module.wp-priv.aws_subnet.pr-subnet"
          ]
        },
        {
          "index_key": "10.0.102.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf74060a162ad1c1",
            "route_table_id": "rtb-0bc5ad21c43db1bfd",
            "subnet_id": "subnet-05808fb5ac989f350"
          },
          "dependencies": [
            "module.wordpress-vpc.aws_vpc.wp-vpc",
            "module.wp-priv.aws_route_table.db_rt",
            "module.wp-priv.aws_subnet.pr-subnet"
          ]
        },
        {
          "index_key": "10.0.103.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f7db0fcb065dde8",
            "route_table_id": "rtb-0bc5ad21c43db1bfd",
            "subnet_id": "subnet-0eec8c262086b29f5"
          },
          "dependencies": [
            "module.wordpress-vpc.aws_vpc.wp-vpc",
            "module.wp-priv.aws_route_table.db_rt",
            "module.wp-priv.aws_subnet.pr-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.wp-priv",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:security-group/sg-0df0329cfed62e17f",
            "description": "Security group for WP-Database",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ce4b8957de1b9e9e"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0df0329cfed62e17f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ce4b8957de1b9e9e"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "021891614879",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sg"
            },
            "tags_all": {
              "Name": "rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a8573f00677f710"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wordpress-vpc.aws_vpc.wp-vpc",
            "module.wp-pub.aws_security_group.allow_multiports_wordpress_sg"
          ]
        }
      ]
    },
    {
      "module": "module.wp-priv",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pr-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.101.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:subnet/subnet-0ea7c9fb12b03406a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea7c9fb12b03406a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021891614879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv-subnet-10.0.101.0/24"
            },
            "tags_all": {
              "Name": "priv-subnet-10.0.101.0/24"
            },
            "vpc_id": "vpc-08a8573f00677f710"
          },
          "dependencies": [
            "module.wordpress-vpc.aws_vpc.wp-vpc"
          ]
        },
        {
          "index_key": "10.0.102.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:subnet/subnet-05808fb5ac989f350",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05808fb5ac989f350",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021891614879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv-subnet-10.0.102.0/24"
            },
            "tags_all": {
              "Name": "priv-subnet-10.0.102.0/24"
            },
            "vpc_id": "vpc-08a8573f00677f710"
          },
          "dependencies": [
            "module.wordpress-vpc.aws_vpc.wp-vpc"
          ]
        },
        {
          "index_key": "10.0.103.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:subnet/subnet-0eec8c262086b29f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eec8c262086b29f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021891614879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv-subnet-10.0.103.0/24"
            },
            "tags_all": {
              "Name": "priv-subnet-10.0.103.0/24"
            },
            "vpc_id": "vpc-08a8573f00677f710"
          },
          "dependencies": [
            "module.wordpress-vpc.aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.wp-pub",
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-089f365c7b6a04f00",
            "arn": "arn:aws:ec2:us-east-1:021891614879:instance/i-0400813c8b4734d1f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0400813c8b4734d1f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "linuxkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-076ed8aa3a8de0cf0",
            "private_dns": "ip-10-0-1-18.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.18",
            "public_dns": "ec2-52-54-157-204.compute-1.amazonaws.com",
            "public_ip": "52.54.157.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ee0a3cbe5a084e8d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f5404f8801c07b50",
            "tags": {
              "Name": "wordpress-EC2"
            },
            "tags_all": {
              "Name": "wordpress-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ce4b8957de1b9e9e"
            ]
          },
          "dependencies": [
            "module.wordpress-vpc.aws_vpc.wp-vpc",
            "module.wp-pub.aws_security_group.allow_multiports_wordpress_sg",
            "module.wp-pub.aws_subnet.pub-subnet",
            "module.wp-pub.data.aws_ami.ami_version"
          ]
        }
      ]
    },
    {
      "module": "module.wp-pub",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wordpress_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:internet-gateway/igw-085b004b86c7651fb",
            "id": "igw-085b004b86c7651fb",
            "owner_id": "021891614879",
            "tags": {
              "Name": "wordpress_igw"
            },
            "tags_all": {
              "Name": "wordpress_igw"
            },
            "vpc_id": "vpc-08a8573f00677f710"
          },
          "dependencies": [
            "module.wordpress-vpc.aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.wp-pub",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wp-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:route-table/rtb-02a78ac00a0b3d065",
            "id": "rtb-02a78ac00a0b3d065",
            "owner_id": "021891614879",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-085b004b86c7651fb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wordpress-rt"
            },
            "tags_all": {
              "Name": "wordpress-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a8573f00677f710"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wordpress-vpc.aws_vpc.wp-vpc",
            "module.wp-pub.aws_internet_gateway.wordpress_igw"
          ]
        }
      ]
    },
    {
      "module": "module.wp-pub",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rt_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6c01cd440e13619",
            "route_table_id": "rtb-02a78ac00a0b3d065",
            "subnet_id": "subnet-0f5404f8801c07b50"
          },
          "dependencies": [
            "module.wordpress-vpc.aws_vpc.wp-vpc",
            "module.wp-pub.aws_internet_gateway.wordpress_igw",
            "module.wp-pub.aws_route_table.wp-rt",
            "module.wp-pub.aws_subnet.pub-subnet"
          ]
        },
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbe9d069bf3f67c0",
            "route_table_id": "rtb-02a78ac00a0b3d065",
            "subnet_id": "subnet-064989aeb9a92fd6c"
          },
          "dependencies": [
            "module.wordpress-vpc.aws_vpc.wp-vpc",
            "module.wp-pub.aws_internet_gateway.wordpress_igw",
            "module.wp-pub.aws_route_table.wp-rt",
            "module.wp-pub.aws_subnet.pub-subnet"
          ]
        },
        {
          "index_key": "10.0.3.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe47954ecadfc880",
            "route_table_id": "rtb-02a78ac00a0b3d065",
            "subnet_id": "subnet-00314a060bc727bf5"
          },
          "dependencies": [
            "module.wordpress-vpc.aws_vpc.wp-vpc",
            "module.wp-pub.aws_internet_gateway.wordpress_igw",
            "module.wp-pub.aws_route_table.wp-rt",
            "module.wp-pub.aws_subnet.pub-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.wp-pub",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_multiports_wordpress_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:security-group/sg-0ce4b8957de1b9e9e",
            "description": "Allow HTTP/HTTPS, SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce4b8957de1b9e9e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Wordpress-EC2-SG",
            "name_prefix": "",
            "owner_id": "021891614879",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Wordpress-EC2-SG"
            },
            "tags_all": {
              "Name": "Wordpress-EC2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a8573f00677f710"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wordpress-vpc.aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.wp-pub",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:subnet/subnet-0f5404f8801c07b50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5404f8801c07b50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021891614879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-10.0.1.0/24"
            },
            "tags_all": {
              "Name": "pub-subnet-10.0.1.0/24"
            },
            "vpc_id": "vpc-08a8573f00677f710"
          },
          "dependencies": [
            "module.wordpress-vpc.aws_vpc.wp-vpc"
          ]
        },
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:subnet/subnet-064989aeb9a92fd6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064989aeb9a92fd6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021891614879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-10.0.2.0/24"
            },
            "tags_all": {
              "Name": "pub-subnet-10.0.2.0/24"
            },
            "vpc_id": "vpc-08a8573f00677f710"
          },
          "dependencies": [
            "module.wordpress-vpc.aws_vpc.wp-vpc"
          ]
        },
        {
          "index_key": "10.0.3.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:subnet/subnet-00314a060bc727bf5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00314a060bc727bf5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021891614879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-10.0.3.0/24"
            },
            "tags_all": {
              "Name": "pub-subnet-10.0.3.0/24"
            },
            "vpc_id": "vpc-08a8573f00677f710"
          },
          "dependencies": [
            "module.wordpress-vpc.aws_vpc.wp-vpc"
          ]
        }
      ]
    }
  ]
}